[package]
name = "deep-into-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
affinity = "0.1.2"
rayon = "1.10.0"
threadpool = "1.8.1"
scoped-thread-pool = "1.0.4"
poolite = "0.7.1"
tokio = { version = "1.36.0", features = ["full"] }
futures="0.3.30"
futures-lite = "2.3.0"
async-std = "1.12.0"
smol = "2.0.0"